# adventofcode

./: .gitignore
2021/: 01-2.py  03-2.py  04-1.py  04-2.py  05-1.py  06-1.py  06-2.improved.py  06-2.py  07-1.py  07-2.py  08-2.py  09-2.py  1-1.py  10-1.py  10-2.py  11-1.py  12-1.py  12-2.py  13-1.py  13-2.py  14-1.py  14-2.py  2-1.py  2-2.py  3-1.py  5-2.py  8-1.py  9-1.py
2021/rust/day-04-optimal/: Cargo.toml
2021/rust/day-06/: Cargo.toml
2022/day-1/src/: main.rs
2022/day-10/src/: main.rs
2022/day-11/src/: main.rs  main.rs.golfed  monkey.rs
2022/day-2/src/: main.rs
2022/day-3/src/: main.rs
2022/day-4/src/: main.rs
2022/day-5/src/: main.rs
2022/day-6/src/: main.rs
2022/day-7/src/: main.rs
2022/day-8/src/: main.rs
2022/day-9/src/: main.rs
2023/: Cargo.toml  default.nix  shell.nix
2023/day-01/src/: main.rs
2023/day-02/src/: main.rs
2023/day-03/src/: main.rs
2023/day-04/src/: main.rs
2023/day-05/src/: main.rs
2023/day-06/src/: main.rs
2023/day-07/src/: main.rs  old.rs
2023/day-08/src/: main.rs
2023/day-09/: Cargo.toml
2023/day-09/benches/: benchmark.rs
2023/day-09/src/: lib.rs  main.rs
2023/day-10/: Cargo.toml
2023/day-10/benches/: benchmark.rs
2023/day-11/: Cargo.toml
2023/day-12/: Cargo.toml
2023/day-12/benches/: benchmark.rs
2023/day-12/src/: lib.rs  main.rs
2023/day-13/: Cargo.toml
2023/day-14/: Cargo.toml
2023/day-15/: Cargo.toml
2023/day-16/: Cargo.toml
2023/day-17/: Cargo.toml
2023/day-18/: Cargo.toml
2023/day-19/: Cargo.toml
2024/: 01.hs  02.hs  03.hs  04.hs  05.hs  flake.nix  shell.nix
(+34 files in other folders)
